KOB-56: Fixed findAvailableHosts error, caused by incorrect proxy usage